--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.0.0",
     "@ng-bootstrap/ng-bootstrap": "^13.1.1",
     "@popperjs/core": "^2.10.2",
+    "@types/facebook-js-sdk": "^3.3.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "ng2-search-filter": "^0.5.1",
